--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 <h1>Hello You!</h1>
+<pre>
+
+   /gg\           /gg\ 
+  /g.gg\         /gg.g\ 
+ |gg..gg\       /gg..gg| 
+ |gg...g|       |g...gg| 
+ |gg...g|       |g...gg| 
+  \gg..g/       \g..gg/ 
+   |gg.gvgggggggvg.gg| 
+  /ggggggggggggggggggg\ 
+ /gggg(((ggggggg)))gggg\ 
+|ggggg....ggggg....ggggg| 
+|ggggg....ggggg....ggggg| 
+|ggcccgggg\___/ggggcccgg| 
+|ggcccccgggg|ggggcccccgg| 
+  \gcccggg\---/gggcccg/ 
+     \ggggggggggggg/
+</pre>
